hotfix/etapa2: SonarCloud code suggested corrections